--- a/public/css/atest.css
+++ b/public/css/atest.css
@@ -19,10 +19,9 @@ p.small {
 a,
 a:hover,
 a:focus,
-a:active,
 a.active {
     outline: 0;
-    color: #18bc9c;
+    color: #81D8D0;
 }
 
 h1,
@@ -31,9 +30,8 @@ h3,
 h4,
 h5,
 h6 {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+    text-transform: capitalize;
+
 }
 
 hr.star-light,
@@ -58,20 +56,20 @@ hr.star-primary:after {
 }
 
 hr.star-light {
-    border-color: #fff;
+    border-color: #2c3131;
 }
 
 hr.star-light:after {
-    color: #fff;
-    background-color: #18bc9c;
+    color: #2c3131;
+    background-color: #81D8D0;
 }
 
 hr.star-primary {
-    border-color: #2c3e50;
+    border-color: #2c3131;
 }
 
 hr.star-primary:after {
-    color: #2c3e50;
+    color: #2c3131;
     background-color: #fff;
 }
 
@@ -81,8 +79,8 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #fff;
-    background: #18bc9c;
+    color: #2c3131;
+    background: #fff;
 }
 
 header .container {
@@ -97,12 +95,11 @@ header img {
 
 header .intro-text .name {
     display: block;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 300;
 }
 
-header .intro-text .skills {
+header .intro-text .fullname {
     font-size: 1em;
     font-weight: 300;
 }
@@ -117,14 +114,14 @@ header .intro-text .skills {
         font-size: 4.75em;
     }
 
-    header .intro-text .skills {
+    header .intro-text .fullname {
         font-size: 1.75em;
     }
 }
 
 @media(min-width:768px) {
     .navbar-fixed-top {
-        padding: 10px 0;
+        padding: 5px 5px;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
@@ -138,7 +135,7 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top.navbar-shrink {
-        padding: 8px 0;
+        padding: 3px 0;
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
@@ -147,9 +144,8 @@ header .intro-text .skills {
 }
 
 .navbar {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+    text-transform: capitalize;
+    background-color: #2c3131;
 }
 
 .navbar a:focus {
@@ -157,7 +153,7 @@ header .intro-text .skills {
 }
 
 .navbar .navbar-nav {
-    letter-spacing: 2px;
+    letter-spacing: 0.5px;
 }
 
 .navbar .navbar-nav li a:focus {
@@ -180,7 +176,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #18bc9c;
+    background: #81D8D0;
 }
 
 section.success a,
@@ -189,7 +185,7 @@ section.success a:focus,
 section.success a:active,
 section.success a.active {
     outline: 0;
-    color: #2c3e50;
+    color: #2c3131;
 }
 
 @media(max-width:767px) {
@@ -207,56 +203,8 @@ section.success a.active {
     width:500px;
 }
 
-#client .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
 
-#client .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 400px;
-}
 
-#client .portfolio-item .portfolio-link .caption {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background: rgba(24,188,156,.9);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#client .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
-}
-
-#client .portfolio-item .portfolio-link .caption .caption-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
-    font-size: 20px;
-    color: #fff;
-}
-
-#client .portfolio-item .portfolio-link .caption .caption-content i {
-    margin-top: -12px;
-}
-
-#client .portfolio-item .portfolio-link .caption .caption-content h3,
-#client .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#client * {
-    z-index: 2;
-}
 
 @media(min-width:767px) {
     #portfolio .portfolio-item {
@@ -278,7 +226,7 @@ section.success a.active {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #18bc9c;
+    color: #81D8D0;
     background: #fff;
 }
 
@@ -331,7 +279,7 @@ section.success a.active {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #18bc9c;
+    color: #81D8D0;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -348,7 +296,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #2c3e50;
+    background-color: #2c3131;
 }
 
 footer .footer-col {
@@ -357,7 +305,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #233140;
+    background-color: #2c3131;
 }
 
 .btn-social {
@@ -441,35 +389,25 @@ footer .footer-below {
     width: 1px;
     height: 75px;
     margin-left: 35px;
-    background-color: #2c3e50;
+    background-color: #2c3131;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    background-color: #2c3e50;
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
+
 
 .portfolio-modal .modal-backdrop {
     display: none;
     opacity: 0;
 }
 
-wrapper {
-    padding-left: 0;
-}
 
 #page-wrapper {
     width: 100%;
     padding: 0;
     background-color: #fff;
+    margin: -15px 10px 10px -30px ;
 }
 
 .huge {
@@ -490,7 +428,7 @@ wrapper {
 /* Top Navigation */
 
 .top-nav {
-    padding: 0 15px;
+    padding: 10px 20px;
 }
 
 .top-nav>li {
@@ -499,10 +437,10 @@ wrapper {
 }
 
 .top-nav>li>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     line-height: 20px;
-    color: #999;
+    color: #eee;
 }
 
 .top-nav>li>a:hover,
@@ -511,7 +449,7 @@ wrapper {
 .top-nav>.open>a:hover,
 .top-nav>.open>a:focus {
     color: #fff;
-    background-color: #000;
+    background-color: #778484;
 }
 
 .top-nav>.open>.dropdown-menu {
@@ -560,27 +498,31 @@ ul.alert-dropdown {
 @media(min-width:768px) {
     .side-nav {
         position: fixed;
-        top: 80px;
-        left: 225px;
-        width: 225px;
-        margin-left: -225px;
-        border: none;
+        font-size:14px;
+        top: 70px;
+        left: 180px;
+        width: 180px;
+        margin-left: -180px;
         border-radius: 0;
         overflow-y: auto;
-        background-color: #2c3e50;
+        background-color: #778484;
         bottom: 0;
         overflow-x: hidden;
-        padding-bottom: 40px;
+        padding-bottom: 20px;
     }
 
     .side-nav>li>a {
-        width: 225px;
+        width: 190px;
+        padding: 15px;
     }
 
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
-        background-color: #000 !important;
+        background-color: #2c3131 !important;
+    }
+    .side-nav li a:active{
+        background-color:#3b4242
     }
 }
 
@@ -595,9 +537,7 @@ ul.alert-dropdown {
     color: #999;
 }
 
-.side-nav>li>ul>li>a:hover {
-    color: #2c3e50;
-}
+
 
 /* Flot Chart Containers */
 
@@ -735,3 +675,5 @@ ul.alert-dropdown {
 .radio label input[type="radio"]:disabled + .cr {
     opacity: .5;
 }
+
+
