--- a/public/css/atest.css
+++ b/public/css/atest.css
@@ -750,3 +750,77 @@ a.selectthumbnail.active{border-color:#18bc9c}
 .media-object.img-selectthumbnail {
   max-width: none;
 }
+
+.add-window {
+  min-height: 50%;
+  min-width: 35%;
+  position: fixed;
+  bottom: 0px;
+  right: 10px;
+  border: 1px solid black;
+  background-color: white;
+}
+
+.add-window .header {
+  background-color: #333;
+  color: white;
+}
+
+.add-window div {
+  padding: 5px 5px;
+}
+
+
+.emptymsg_container {
+   display: block;
+   width: 80%;
+   margin: 0 auto;
+   visibility:hidden;
+   text-align:center;
+   margin-top:15%;
+}
+
+ .selectize-control > .selectize-dropdown {
+      top: 36px;
+    }
+
+.selectize-dropdown, .selectize-input, .selectize-input { 
+  line-height: 14px; 
+}
+
+.message_sendername{
+
+   min-width: 20%;
+   padding-left:1%;
+   display: inline-block;
+}
+
+
+.message_previewtext{
+
+   display: inline-block;
+   color:#b4bcc2;
+   padding-left:1%;
+   white-space: nowrap;
+   width: 60%;
+   font-size: 13px;
+   overflow: hidden;
+   text-overflow: ellipsis;
+}
+
+.message_previewtext_unread{
+
+   display: inline-block;
+   padding-left:1%;
+   white-space: nowrap;
+   width: 60%;
+   font-size: 14px;
+   overflow: hidden;
+   text-overflow: ellipsis;
+}
+
+.message_timestamp{
+
+   float:right;
+   display: inline-block;
+}
